<?xml version="1.0" encoding="utf-8"?>
<!--关于界面-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorMain"
        android:fitsSystemWindows="true">
        <Button
            android:id="@+id/back_about"
            android:background="@drawable/icon_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:text=""/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_info"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal"/>
    <ListView
        android:id="@+id/about_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:background="#ffffff"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_info"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal" />

</RelativeLayout>