<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/check_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorMain"
        android:fitsSystemWindows="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="欢迎"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:gravity="center"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/try_welcome"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="102dp"
            android:background="@color/colorMain"
            android:padding="10dp"
            android:text="@string/try_welcome_text"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/login_welcome"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="152dp"
            android:background="@color/colorMain"
            android:padding="10dp"
            android:text="@string/login_welcome_text"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/weChat_welcome"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="247dp"
            android:background="@color/colorMain"
            android:padding="10dp"
            android:text="@string/weChat_welcome_text"
            android:textColor="#ffffff"
            android:textSize="24sp" />
    </RelativeLayout>

</RelativeLayout>
